--- a/test/Microsoft.IdentityModel.Tests/Microsoft.IdentityModel.Tests.csproj
+++ b/test/Microsoft.IdentityModel.Tests/Microsoft.IdentityModel.Tests.csproj
@@ -16,6 +16,10 @@
 	<IsTestProject>false</IsTestProject>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <DefineConstants>WINDOWS</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\Microsoft.IdentityModel.Logging\Microsoft.IdentityModel.Logging.csproj" />
     <ProjectReference Include="..\..\src\Microsoft.IdentityModel.Protocols.OpenIdConnect\Microsoft.IdentityModel.Protocols.OpenIdConnect.csproj" />
